# ldforge

./: .hgignore  CMakeLists.txt  README.md  changelog.txt  codegen.py  doxygen.ini  ldforge.qrc  updaterevision.py
codegen/: CMakeLists.txt  codegen.cpp
data/: primitive-categories.cfg
src/: actions.cc  actions.cpp  actionsEdit.cc  actionsEdit.cpp  addObjectDialog.cc  addObjectDialog.cpp  addObjectDialog.h  basics.cc  basics.cpp  basics.h  canvas.cpp  canvas.h  colorSelector.cc  colorSelector.h  colors.cc  colors.cpp  colors.h  config.ui  configDialog.cc  configDialog.cpp  configDialog.h  configuration.cc  configuration.cpp  configuration.h  configurationoptions.txt  crashCatcher.cc  crashCatcher.cpp  crashCatcher.h  dialogs.cc  dialogs.cpp  dialogs.h  documentation.cc  documentation.cpp  documentation.h  documentloader.cpp  documentloader.h  documentmanager.cpp  documentmanager.h  doublemap.h  editHistory.cc  (+96 more)
src/algorithms/: geometry.cpp  geometry.h  invert.cpp  invert.h
src/dialogs/: aboutdialog.ui  circularprimitiveeditor.cpp  circularprimitiveeditor.h  circularprimitiveeditor.ui  colorselector.cpp  colorselector.h  colortoolbareditor.cpp  colortoolbareditor.h  colortoolbareditor.ui  configdialog.cpp  configdialog.h  configdialog.ui  cylindereditor.cpp  cylindereditor.h  cylindereditor.ui  externalprogrampathdialog.cpp  externalprogrampathdialog.h  externalprogrampathdialog.ui  generateprimitivedialog.cpp  generateprimitivedialog.h  generateprimitivedialog.ui  ldrawpathdialog.cpp  ldrawpathdialog.h  ldrawpathdialog.ui  newpartdialog.cpp  newpartdialog.h  newpartdialog.ui  openprogressdialog.cpp  openprogressdialog.h  shortcutsmodel.cpp  shortcutsmodel.h  subfilereferenceeditor.cpp  subfilereferenceeditor.h  subfilereferenceeditor.ui
src/editmodes/: abstractEditMode.cc  abstractEditMode.cpp  abstractEditMode.h  abstracteditmode.cc  abstracteditmode.h  circleMode.cc  circleMode.cpp  circleMode.h  circlemode.cc  circlemode.h  curvemode.cpp  curvemode.h  drawMode.cc  drawMode.cpp  drawMode.h  drawmode.cc  drawmode.h  lineLoopMode.cpp  lineLoopMode.h  linePathMode.cpp  linePathMode.h  magicWandMode.cc  magicWandMode.cpp  magicWandMode.h  magicwandmode.cc  magicwandmode.h  rectangleMode.cc  rectangleMode.cpp  rectangleMode.h  selectMode.cc  selectMode.cpp  selectMode.h  selectmode.cc  selectmode.h
src/generics/: enums.h  functions.h  migrate.h  oneof.h  range.h  reverse.h  ring.h  transform.h  vectormodel.h
src/geometry/: linesegment.cpp  linesegment.h  plane.cpp  plane.h
src/linetypes/: circularprimitive.cpp  circularprimitive.h  comment.cpp  comment.h  conditionaledge.cpp  conditionaledge.h  cylinder.cpp  cylinder.h  edgeline.cpp  edgeline.h  empty.cpp  empty.h  modelobject.cpp  modelobject.h  quadrilateral.cpp  quadrilateral.h  triangle.cpp  triangle.h
src/misc/: ringFinder.cc  ringFinder.h
src/script/: ast.cpp  ast.h  functions.h  object.cpp  object.h  objtype.cpp  objtype.h  parser.cpp  parser.h
src/toolsets/: algorithmtoolset.cpp  algorithmtoolset.h  basictoolset.cpp  basictoolset.h  extprogramtoolset.cpp  extprogramtoolset.h  filetoolset.cpp  filetoolset.h  fixroundingerrors.ui  movetoolset.cpp  movetoolset.h  toolset.cpp  toolset.h  viewtoolset.cpp  viewtoolset.h
src/types/: boundingbox.cpp  boundingbox.h  library.h  matrix.cpp  matrix.h  pattern.cpp  pattern.h  vertex.cpp  vertex.h
src/widgets/: circularsectioneditor.cpp  circularsectioneditor.h  circularsectioneditor.ui  colorbutton.cpp  colorbutton.h  doublespinbox.cpp  doublespinbox.h  extendedkeysequenceeditor.cpp  extendedkeysequenceeditor.h  headeredit.cpp  headeredit.h  headeredit.ui  matrixeditor.cpp  matrixeditor.h  matrixeditor.ui  patterneditor.cpp  patterneditor.h  patterneditor.ui  patternviewer.cpp  patternviewer.h  vertexobjecteditor.cpp  vertexobjecteditor.h  vertexobjecteditor.ui
tools/: caseconversions.py  configcollector.py  linelength.py  outputfile.py  updaterevision.py
ui/: about.ui  colorsel.ui  config.ui  ldforge.ui  overlay.ui
updaterevision/: updaterevision.c
